# ErrorOS

./: COMMIT_MESSAGE.md  GETTING_STARTED.md  OS_DEVELOPMENT_ROADMAP.md
ErrorOS-0-4-markdowm/: 0.1 Rust工具链安装.md  0.2 QEMU模拟器配置.md  0.3 项目结构初始化.md  0.4 开发工具配置.md  1.1 去除标准库依赖.md  1.2实现最小内核程序.2实现最小内核程序  1.3 UART串口驱动实现.md  1.4 实现输出宏.md  1.5 第一个内核输出.md  2.1 RISC-V特权级架构.md  2.2 异常处理机制.md  2.3 中断描述符表.md  2.4 异常处理入口.md  2.5异常分发器  2.6 中断使能与屏蔽.md  2.7 测试异常处理.md  3.1 物理内存管理.md  3.2 物理地址抽象.md  3.3 物理页帧定义  3.4 实现 Bump Allocator（物理页帧分配器）.md  3.5 实现堆分配器.md  3.6 测试动态内存分配.md
docs/: 00_project_proposal.md  01_virtual_memory_implementation.md  02_syscall_implementation.md  02_syscall_实际运行效果.md  Chapter_structure.md  lab_guide_introduction.md
os/: Cargo.toml
os/src/: allocator.rs  interrupts.rs  lib.rs  main.rs
os/src/memory/: address_space.rs  mod.rs  paging.rs
os/src/syscall/: mod.rs  syscall_impl.rs
